--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.4",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "stripe": "^15.3.0"
   }
 }
