--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "description": "Api for service to search or create events.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "node --env-file .env index.js",
+    "dev": "nodemon --env-file .env index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,9 +20,9 @@
   },
   "homepage": "https://github.com/Raddzor01/uevent#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
