AdminJS server integration

--- a/api/.env.example
+++ b/api/.env.example
@@ -7,8 +7,8 @@ DATABASE_HOST=db-host-name
 DATABASE_USER=db-username
 DATABASE_PASSWORD=db-user-password
 
-JSWT_KEY=jswt-password
-JSWT_LIFE=40d
+COOKIE_SECRET=N55bKFYsGnc5OoUNkvU3twEPfMabwVSK
+COOKIE_LIFE=40d
 
 NODEMAILER_HOST=host-name
 NODEMAILER_PORT=port-number
@@ -18,4 +18,3 @@ NODEMAILER_PASSWORD=email-password
 STRIPE_API_VERSION=2024-04-10
 STRIPE_API_SECRET_KEY=stripe-business-secret-api-key
 STRIPE_WEBHOOK_KEY=stripe-webhook-key
-
